force-app/main/default/objects/Course__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>