force-app/main/default/objects/Course__c/validationRules/Course_Duration_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Duration_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Type__c, &quot;PG&quot;),
        ISPICKVAL(Type__c, &quot;UG&quot;)
    ),
    CONTAINS(LOWER(Duration__c), &quot;months&quot;)
)</errorConditionFormula>
    <errorMessage>The duration of UG and PG courses should be in years</errorMessage>
</ValidationRule>