force-app/main/default/objects/Course__c/validationRules/Course_Duration_Validation1.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Duration_Validation1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Type__c, &quot;Diploma&quot;),
        ISPICKVAL(Type__c, &quot;Internship&quot;)
    ),
    NOT(CONTAINS(LOWER(Duration__c), &quot;months&quot;))
)</errorConditionFormula>
    <errorMessage>The duration of internship and diploma should be in months</errorMessage>
</ValidationRule>