force-app/main/default/objects/Course__c/validationRules/Duration_Format_Check_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_Format_Check_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
  OR(
    CONTAINS(LOWER(Duration__c), &quot;month&quot;),
    CONTAINS(LOWER(Duration__c), &quot;year&quot;),
    CONTAINS(LOWER(Duration__c), &quot;yrs&quot;),
  CONTAINS(LOWER(Duration__c), &quot;yr&quot;)
  )
)</errorConditionFormula>
    <errorMessage>Duration should contain either month or year with it</errorMessage>
</ValidationRule>