force-app/main/default/objects/Course__c/validationRules/Duration_Format_Check_Validation1.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_Format_Check_Validation1</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    OR(
        BEGINS(Duration__c, &quot;1&quot;),
        BEGINS(Duration__c, &quot;2&quot;),
        BEGINS(Duration__c, &quot;3&quot;),
        BEGINS(Duration__c, &quot;4&quot;),
        BEGINS(Duration__c, &quot;5&quot;),
        BEGINS(Duration__c, &quot;6&quot;),
        BEGINS(Duration__c, &quot;7&quot;),
        BEGINS(Duration__c, &quot;8&quot;),
        BEGINS(Duration__c, &quot;9&quot;),
        BEGINS(Duration__c, &quot;0&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Duration should start with a number</errorMessage>
</ValidationRule>