force-app/main/default/objects/Course__c/validationRules/Fees_Related_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Fees_Related_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Fees__c &lt;  5000  &amp;&amp; Fees__c &gt; 50000</errorConditionFormula>
    <errorMessage>Fees should be between 5000 to 50000</errorMessage>
</ValidationRule>